Add user input and basic display

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,49 @@
-.App {
-  text-align: center;
+.textInput {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border: none;
+  outline: none;
+  resize: none;
+  opacity: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.textDisplay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #888;
+  max-width: 60rem;
+  padding: 2rem;
   pointer-events: none;
+  white-space: pre-wrap;
+  font-family: menlo, monospace;
+  margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.char {
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+.charSuccess {
+  color: #000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.charError {
+  color: #fff;
+  background: #ff0000;
+}
+
+.charSuccess, .charError {
+  animation: 0.2s bounce;
+  transform-origin: center;
+}
+
+@keyframes bounce {
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
 }
