Add "words per minute" calculation

--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,15 @@
   background: #ff0000;
 }
 
+.feedbackDisplay {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.feedbackDisplayActive {
+  opacity: 1;
+}
+
 @keyframes greenToBlack {
   0% { color: #42f486; }
   100% { color: #000; }
